services pages responsive

--- a/ExectileDysfunctionProcedure.html
+++ b/ExectileDysfunctionProcedure.html
@@ -64,23 +64,42 @@
 
 <!-- Ending  Header -->
 
+
+<!--  MAIN SECTION -->
+
+<section>
+    <div class="container mb-5">
+        <div class="row"> 
+            <h3 class="pb-3">Exectile Dysfunction</h3>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+          
+            </div>
+        </div>
+    </div>
+  </section>
+  
+  <!--  ENDING  MAIN SECTION -->
+
 <!--  Focused Extracorporeal Shock wave Therapy   -->
 <section>
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-5">Focused Extracorporeal Shock wave Therapy  </h3>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12 col-md-12">
                <img src="assets/img/Erectile_Dysfunction1.png" class="img-fluid" alt="">
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12 col-md-12">
              <span>
                 Focused Extracorporeal Shock Wave Therapy (ESWT): Revitalizing Wellness 
-                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .
-                Procedure Overview: 
+                Targeted Extracorporeal Shock Wave Therapy, available at Aruna Hospital Couples Clinics, is a non-invasive medical procedure that uses shock waves to stimulate healing and improve blood circulation in specific areas of the body become bodies. .<br>
+                Procedure Overview: <br>
                 Assessment: Our experienced specialists will assess your specific condition to determine whether ESWT is the right treatment option for you. 
-                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. 
-                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime. Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more. 
-                Recovery: Most patients can return to their daily activities immediately after the procedure. 
+                Concentrated treatment: During the treatment, targeted shock waves are delivered to the affected area, promoting tissue regeneration and relieving pain. <br>
+                Pleasant Experience: ESWT is generally painless and requires no anesthesia or downtime.<br> Benefits: ESWT has been proven effective in treating a variety of conditions, including musculoskeletal pain, erectile dysfunction, and more.<br> 
+                Recovery: Most patients can return to their daily activities immediately after the procedure. <br>
                 If you are looking for a non-invasive and effective solution to your condition, contact Aruna Hospital Couples Clinic to learn more about how targeted extracorporeal shockwave therapy can help you revive your well-being.
              </span>
             </div>
@@ -93,19 +112,19 @@
 <section>
     <div class="container mb-5">
         <div class="row"> 
-            <h1>HIFEM Chair</h1>
-            <div class="col-6">
+            <h3 class="pb-5">HIFEM Chair</h3>
+            <div class="col-lg-6 col-sm-12 col-md-12">
                <span>
                     HIFEM Chair (Emsella Chair) at Aruna Hospital Couple Clinics: Elevating Pelvic Health
-                    At Aruna Hospital Couple Clinics, we offer the cutting-edge HIFEM Chair, also known as the Emsella Chair. This remarkable device employs High-Intensity Focused Electromagnetic (HIFEM) technology to strengthen pelvic floor muscles.
-                    Key Features:
-                    Non-Invasive: The HIFEM Chair treatment is entirely non-invasive, requiring no surgery or medication.
-                    Efficient: Sessions are quick, lasting about 30 minutes, and you can return to your routine immediately.
-                    Effective: It's highly effective for addressing issues like urinary incontinence and enhancing pelvic muscle strength.
+                    At Aruna Hospital Couple Clinics, we offer the cutting-edge HIFEM Chair, also known as the Emsella Chair. This remarkable device employs High-Intensity Focused Electromagnetic (HIFEM) technology to strengthen pelvic floor muscles.<br>
+                    Key Features:<br>
+                    Non-Invasive: The HIFEM Chair treatment is entirely non-invasive, requiring no surgery or medication.<br>
+                    Efficient: Sessions are quick, lasting about 30 minutes, and you can return to your routine immediately.<br>
+                    Effective: It's highly effective for addressing issues like urinary incontinence and enhancing pelvic muscle strength.<br>
                     Transform your pelvic health and regain your confidence with the HIFEM Chair at Aruna Hospital Couple Clinics. Contact us to schedule a consultation and start your journey toward improved pelvic well-being.
                </span>
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12 col-md-12">
                 <img src="assets/img/Erectile_Dysfunction2.png" class="img-fluid" alt="">
             </div>
         </div>
@@ -117,23 +136,23 @@
 <section>
     <div class="container mb-5">
         <div class="row"> 
-            <h1> P-Shot  </h1>
-            <div class="col-6">
+            <h3 class="pb-5"> P-Shot  </h3>
+            <div class="col-lg-6 col-sm-12 col-md-12">
                 <img src="assets/img/Erectile_Dysfunction3.png" class="img-fluid" alt="">
             </div>
-            <div class="col-6">
+            <div class="col-lg-6 col-sm-12 col-md-12">
                <span>
                     P-Shot (Priapus Shot): Enhancing Male Sexual Wellness
-                    The P-Shot, also known as the Priapus Shot, is a non-surgical medical procedure offered at Aruna Hospital Couple Clinics. It involves the injection of platelet-rich plasma (PRP) into the penis to enhance sexual function and overall wellness in men.
-                    Benefits:
-                    Enhanced Erection Quality: The P-Shot can improve the quality and duration of erections.
-                    Increased Sensation: Some men report heightened sensitivity and improved sexual pleasure.
-                    Tissue Regeneration: PRP may promote tissue regeneration in the penis.
-                    Procedure Overview:
-                    Assessment: Our experienced specialists assess your specific needs and eligibility for the P-Shot.
-                    PRP Extraction: A small sample of your blood is drawn and processed to extract PRP.
-                    Injection: The PRP is carefully injected into targeted areas of the penis.
-                    Results: Over time, patients often experience improved sexual function and satisfaction.
+                    The P-Shot, also known as the Priapus Shot, is a non-surgical medical procedure offered at Aruna Hospital Couple Clinics. It involves the injection of platelet-rich plasma (PRP) into the penis to enhance sexual function and overall wellness in men.<br>
+                    Benefits:<br>
+                    Enhanced Erection Quality: The P-Shot can improve the quality and duration of erections.<br>
+                    Increased Sensation: Some men report heightened sensitivity and improved sexual pleasure.<br>
+                    Tissue Regeneration: PRP may promote tissue regeneration in the penis.<br>
+                    Procedure Overview:<br>
+                    Assessment: Our experienced specialists assess your specific needs and eligibility for the P-Shot.<br>
+                    PRP Extraction: A small sample of your blood is drawn and processed to extract PRP.<br>
+                    Injection: The PRP is carefully injected into targeted areas of the penis.<br>
+                    Results: Over time, patients often experience improved sexual function and satisfaction.<br>
                     The P-Shot is a non-invasive and discreet option to enhance male sexual wellness. Contact Aruna Hospital Couple Clinics to learn more about this procedure and how it can benefit you.
                </span>
             </div>
