--- a/femalenonsurgical.html
+++ b/femalenonsurgical.html
@@ -22,63 +22,85 @@
 
 </head>
 <body>
-
  <!-- Header -->
  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- <div class="col-3"> 
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-          <div class="row"> 
-            <div class="col-3 ps-5"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                </li>
-            </div>
-             <div class="col-3 ps-5"> 
-               <li class="nav-item ps-5">
-                  <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-               </li>
-             </div>
-            <div class="col-3 ps-5"> 
-                <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                    <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
-                </li>
-            </div>
-            <div class="col-3 ps-5  mt-2 navbarappoinment"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                </li>
-            </div>
-          </div>
-          </ul>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="col-3"> 
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
       </div>
-  </div>
-</nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
+            <ul class="navbar-nav">
+            <div class="row"> 
+              <!-- <div class="col-3 ps-5"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  </li>
+              </div> -->
+               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
+                 <li class="nav-item ps-5 me-5">
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                 </li>
+               </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
+                  <li class="nav-item mt-3  navbarphonenumber">
+                    <div class="row"> 
+                        <div class="col-3 ps-2"> 
+                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
+                        </div>
+                        <div class="col-9 mt-2">
+                          <h5>+79979901881</h5>
+                        </div>
+                    </div>
+                  </li>
+              </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                  </li>
+              </div>
+            </div>
+            </ul>
+        </div>
+    </div>
+  </nav>
 
 <!-- Ending  Header -->
+
+<!--  MAIN SECTION -->
+<section>
+    <div class="container mb-5">
+        <div class="row"> 
+            <h3 class="pb-3">FEMALE NON SURGICAL</h3>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+          
+            </div>
+        </div>
+    </div>
+</section>
+<!--  ENDING  MAIN SECTION -->
 
 <!-- VAGINAL REJUVENATION -->
 <section>
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">VAGINAL REJUVENATION</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pt-4">
                <img src="assets/img/aruna (600 x 300 px).png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12 p-3">
-             <span >Vaginal Rejuvenation at Aruna Hospital Couple Clinics: Boost your confidence and well-being. 
-                At Aruna Hospital Couples Clinics, we offer vaginal rejuvenation services to make you look and feel your best. This procedure can: 
+             <span >Vaginal Rejuvenation at Aruna Hospital Couple Clinics: Boost your       confidence and well-being. <br>
+                At Aruna Hospital Couples Clinics, we offer vaginal rejuvenation services to make you look and feel your best. This procedure can: <br>
                 improve the appearance of the vaginal area. 
                 Increases sensitivity and intimacy. 
                 Restores the tone and function of the vagina. 
-                Increase your self-esteem. 
+                Increase your self-esteem. <br>
                 Our experienced team offers individual support in a discreet and pleasant atmosphere. Rediscover your self-esteem and intimacy with vaginal rejuvenation at Aruna Hospital's couples clinics. Book your consultation appointment today! 
              </span>
             </div>
@@ -94,9 +116,10 @@
             <h3 class="pb-3">URINARY INCONTINENCE</h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
-                Urinary Incontinence at Aruna Hospital Couple Clinics: Regaining Control and Confidence  Are you struggling with urinary incontinence? Couples clinics at Aruna Hospital can help you regain control and confidence. Our approach includes: Assessment: We understand your unique situation. 
-                treatment: solutions tailored to your needs. 
-                Support: Compassionate care to improve quality of life.
+                Urinary Incontinence at Aruna Hospital Couple Clinics: Regaining Control and Confidence  Are you struggling with urinary incontinence? Couples clinics at Aruna Hospital can help you regain control and confidence. Our approach includes: 
+                <br>Assessment: We understand your unique situation. <br>
+                 treatment: solutions tailored to your needs.  <br>
+                 Support: Compassionate care to improve quality of life. <br>
                 Don't let urinary incontinence limit you. Take the first step towards more self-confidence. Schedule a consultation at Aruna Hospital Couples Clinic today! 
              </span>
             </div>
@@ -120,14 +143,14 @@
              <span>
                 Vaginal dryness and vaginal dryness infections at Aruna Hospital couples clinics: specialized care for your well-being 
 
-                Are you suffering from vaginal dryness or infections? Aruna Hospital Couples Clinics provide expert care to ensure your well-being: 
+                Are you suffering from vaginal dryness or infections? Aruna Hospital Couples Clinics provide expert care to ensure your well-being: <br>
 
-                Vaginal Dryness: Assessment: We understand your specific concerns and needs. 
+                Vaginal Dryness: Assessment: We understand your specific concerns and needs. <br>
 
-                Treatment : Personalized solutions to relieve discomfort. Support: Compassionate care that restores comfort and confidence. 
+                Treatment : Personalized solutions to relieve discomfort. Support: Compassionate care that restores comfort and confidence. <br>
 
-                Vaginal infections: 
-                Diagnosis: precise identification of the infection. Treatment: Effective measures to solve the problem. 
+                Vaginal infections: <br>
+                Diagnosis: precise identification of the infection. Treatment: Effective measures to solve the problem. <br>
                 Prevention: Guidelines for Reducing the Risk of Relapse. Your well-being and health are important. Contact the couples clinics at Aruna Hospital for expert help and support. Find your well-being today!
              </span>
             </div>
@@ -144,10 +167,10 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
                 Worried about vaginal discharge? The couples clinic at Aruna Hospital is here for you. 
-                Do you have abnormal vaginal discharge? At Aruna Hospital Couples Clinics, we offer expert care that will clarify your doubts: 
-                Assessment: Our specialists will assess the nature and cause of your vaginal discharge. 
-                Treatment: Tailored solutions to manage or resolve the problem. 
-                Education: Guidelines for Maintaining Vaginal Health and Hygiene. 
+                Do you have abnormal vaginal discharge? At Aruna Hospital Couples Clinics, we offer expert care that will clarify your doubts: <br>
+                Assessment: Our specialists will assess the nature and cause of your vaginal discharge. <br>
+                Treatment: Tailored solutions to manage or resolve the problem.<br> 
+                Education: Guidelines for Maintaining Vaginal Health and Hygiene.<br> 
                 Your comfort and health are our priority. Contact Couples Clinics at Aruna Hospital for compassionate care and support. Take the first step towards better health today! 
              </span>
             </div>
@@ -164,20 +187,20 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">POST DELIVERY REHABILITATION</h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 mt-5 pt-5">
                 <img src="assets/img/5.png"  class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
-                Postnatal Rehabilitation at Aruna Hospital Couples Clinics: Your Path to Recovery and Wellness 
+                Postnatal Rehabilitation at Aruna Hospital Couples Clinics: Your Path to Recovery and Wellness <br>
                 Welcoming a new family member is a beautiful experience, but it can also bring physical challenges. At Aruna Hospital Couples Clinics, we offer comprehensive postnatal rehabilitation to support recovery and 
-                well-being. 
-                Our program includes: 
-                Evaluation: Our experts assess your needs and physical condition after pregnancy. 
-                Tailor-made rehabilitation: Individual exercises and therapies to strengthen the body and get back into shape. 
+                well-being.  <br>
+                Our program includes:  <br>
+                Evaluation: Our experts assess your needs and physical condition after pregnancy.  <br>
+                Tailor-made rehabilitation: Individual exercises and therapies to strengthen the body and get back into shape.  <br>
                 Nutrition Guide: A balanced diet that promotes healing and energy. 
-                Emotional Support: Tips and resources for dealing with emotional issues during transition. 
-                Wellness Education: Information sessions on post-pregnancy health and self-care. 
+                Emotional Support: Tips and resources for dealing with emotional issues during transition.  <br>
+                Wellness Education: Information sessions on post-pregnancy health and self-care.  
                 We understand that every woman's journey is unique. Our team is committed to helping you recover, rebuild and thrive after birth. Contact couples clinics at Aruna Hospital to begin your journey to a healthier 
              </span>
             </div>
@@ -194,9 +217,9 @@
             <h3 class="pb-3"> G-SHOT </h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
-                G-Shot: Improved Sensation and Satisfaction Experience increased sensitivity and satisfaction with G-Shot treatment at Aruna Hospital Couples Clinics. 
-                G-Shot is a minimally invasive treatment that involves precise injection to improve and rejuvenate the G-spot, a very sensitive area in women. 
-                Benefits: 
+                G-Shot: Improved Sensation and Satisfaction Experience increased sensitivity and satisfaction with G-Shot treatment at Aruna Hospital Couples Clinics. <br>
+                G-Shot is a minimally invasive treatment that involves precise injection to improve and rejuvenate the G-spot, a very sensitive area in women. <br>
+                Benefits: <br>
                 Increased sexual pleasure 
                 Improved intimacy Fast and virtually painless 
                 Rediscover your passion and satisfaction. 
@@ -216,15 +239,15 @@
     <div class="container mb-5">
         <div class="row"> 
             <h3 class="pb-3">O-SHOT </h3>
-            <div class="col-lg-6 col-md-12 col-sm-12">
+            <div class="col-lg-6 col-md-12 col-sm-12 pt-2">
                 <img src="assets/img/8.png" class="img-fluid"  alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
                 O-Shot: Improve Intimacy and Sensations 
                 Increase the quality of your intimate experiences with O-Shot treatment at Aruna Hospital couples clinics.
-                O-Shot, short for Orgasm Shot, is a non-surgical treatment to increase sexual satisfaction in women. This is a quick and painless injection of platelet-rich plasma (PRP) to stimulate tissue rejuvenation in the vaginal area. 
-                Benefits: 
+                O-Shot, short for Orgasm Shot, is a non-surgical treatment to increase sexual satisfaction in women. This is a quick and painless injection of platelet-rich plasma (PRP) to stimulate tissue rejuvenation in the vaginal area.  <br>
+                Benefits:  <br>
                 Increased sexual desire and arousal 
                 Increased intensity of orgasm Improve vaginal tone 
                 Improved overall sexual well-being 
