--- a/femalesurgical.html
+++ b/femalesurgical.html
@@ -25,44 +25,68 @@
 
  <!-- Header -->
  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- <div class="col-3"> 
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-          <div class="row"> 
-            <div class="col-3 ps-5"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                </li>
-            </div>
-             <div class="col-3 ps-5"> 
-               <li class="nav-item ps-5">
-                  <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-               </li>
-             </div>
-            <div class="col-3 ps-5"> 
-                <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                    <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
-                </li>
-            </div>
-            <div class="col-3 ps-5  mt-2 navbarappoinment"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                </li>
-            </div>
-          </div>
-          </ul>
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="col-3"> 
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
       </div>
-  </div>
-</nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
+            <ul class="navbar-nav">
+            <div class="row"> 
+              <!-- <div class="col-3 ps-5"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  </li>
+              </div> -->
+               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
+                 <li class="nav-item ps-5 me-5">
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                 </li>
+               </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
+                  <li class="nav-item mt-3  navbarphonenumber">
+                    <div class="row"> 
+                        <div class="col-3 ps-2"> 
+                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
+                        </div>
+                        <div class="col-9 mt-2">
+                          <h5>+79979901881</h5>
+                        </div>
+                    </div>
+                  </li>
+              </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                  </li>
+              </div>
+            </div>
+            </ul>
+        </div>
+    </div>
+  </nav>
 
 <!-- Ending  Header -->
+
+
+<!--  MAIN SECTION -->
+<section>
+    <div class="container mb-5">
+        <div class="row"> 
+            <h3 class="pb-3">FEMALE  SURGICAL</h3>
+            <div class="col-lg-6 col-md-12 col-sm-12">
+                
+            </div>
+            <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+          
+            </div>
+        </div>
+    </div>
+</section>
+<!--  ENDING  MAIN SECTION -->
 
 <!--  HYMENOPLASTY -->
 <section>
@@ -74,10 +98,10 @@
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <span>
-                    Hymenoplasty: Restoring Trust and Intimacy 
-                    Hymenoplasty, offered at Aruna Hospital couples clinics, is a surgical procedure to reconstruct the hymen, the thin membrane near the vaginal opening. 
-                    Benefits: 
-                    Trust: Regain your trust and confidentiality. 
+                    Hymenoplasty: Restoring Trust and Intimacy <br> 
+                    Hymenoplasty, offered at Aruna Hospital couples clinics, is a surgical procedure to reconstruct the hymen, the thin membrane near the vaginal opening. <br>
+                    Benefits: <br>
+                    Trust: Regain your trust and confidentiality. <br>
                     Cultural or personal reasons: Perfect for cultural or personal reasons. 
                     Safe and discreet: safe, discreet and relatively quick procedure. 
                     Rediscover your self-esteem and well-being.Contact Aruna Hospital Couples Clinics to learn more about hymenoplasty and how it can meet your needs.
@@ -95,11 +119,11 @@
             <h3 class="pb-3" >LABIOMINORAPLASTY</h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <span>       
-                    Labiominoraplasty: increased comfort and confidence 
-                    Labiomajorplasty, offered at Aruna Hospital couples clinics, is a surgical procedure to change the shape or reduce the size of the labia majora, the outer lips of the vagina. 
-                    Benefits: 
-                    Comfort: Relieves discomfort and irritation caused by enlarged labia majora. 
-                    Confidence: Increase your self-confidence and body image. 
+                    Labiominoraplasty: increased comfort and confidence <br>
+                    Labiomajorplasty, offered at Aruna Hospital couples clinics, is a surgical procedure to change the shape or reduce the size of the labia majora, the outer lips of the vagina. <br>
+                    Benefits: <br>
+                    Comfort: Relieves discomfort and irritation caused by enlarged labia majora. <br>
+                    Confidence: Increase your self-confidence and body image.<br> 
                     Custom: Tailored to your individual needs and preferences. Rediscover well-being and self-confidence in 
                     your body.Contact Couples Clinics at Aruna Hospital to learn more about labiaplasty and its potential benefits for you.
                 </span>
@@ -123,11 +147,11 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <span>
                     Labiomajorplasty: increased comfort and confidence 
-                    Labiomajorplasty is a surgery offered at Aruna Hospital's couples clinics that aims to change the shape or size of the labia majora, the outer labia of the vagina. 
-                    Benefits: 
-                    Comfort: Relieves discomfort and irritation. 
-                    Confidence: Increases self-confidence and body image. 
-                    Custom: Tailored to your individual needs and preferences. 
+                    Labiomajorplasty is a surgery offered at Aruna Hospital's couples clinics that aims to change the shape or size of the labia majora, the outer labia of the vagina. <br>
+                    Benefits: <br>
+                    Comfort: Relieves discomfort and irritation. <br>
+                    Confidence: Increases self-confidence and body image. <br>
+                    Custom: Tailored to your individual needs and preferences. <br>
                     Rediscover the comfort and safety of your body thanks to Labiomajoraplastka.Contact us for more information.
                 </span>
             </div>
@@ -144,11 +168,11 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <span>
                     Clitoral hood reduction: Improved comfort and aesthetics 
-                    Clitoral hood reduction, available at Aruna Hospital Couples Clinics, is a surgical procedure to reduce excess skin or tissue covering the clitoral area. 
-                    Benefits: 
-                    Comfort: Relieves discomfort and irritation. 
-                    Aesthetics: Improves the appearance of the clitoral area. 
-                    Custom: Tailored to your individual needs and preferences. 
+                    Clitoral hood reduction, available at Aruna Hospital Couples Clinics, is a surgical procedure to reduce excess skin or tissue covering the clitoral area. <br> 
+                    Benefits: <br>
+                    Comfort: Relieves discomfort and irritation. <br>
+                    Aesthetics: Improves the appearance of the clitoral area. <br>
+                    Custom: Tailored to your individual needs and preferences. <br>
                     Rediscover comfort and confidence with clitoral hood reduction.For more information about this procedure, contact Couples Clinic at Aruna Hospital.
                 </span>
             </div>
@@ -171,11 +195,11 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
              <span>
                 Clitoral Exposure: Improved Sensation and Comfort 
-                Clitoral exposure, offered at Aruna Hospital Couples Clinics, is a surgical procedure that exposes the glans of the clitoris by removing excess tissue from the clitoral hood. 
-                Benefits: 
-                Sensation: Can increase sensitivity and sexual pleasure. 
-                Comfort: Relieves discomfort and irritation caused by an enlarged clitoral hood. 
-                Custom: Tailored to your individual needs and wishes. 
+                Clitoral exposure, offered at Aruna Hospital Couples Clinics, is a surgical procedure that exposes the glans of the clitoris by removing excess tissue from the clitoral hood. <br>
+                Benefits: <br>
+                Sensation: Can increase sensitivity and sexual pleasure. <br>
+                Comfort: Relieves discomfort and irritation caused by an enlarged clitoral hood. <br>
+                Custom: Tailored to your individual needs and wishes. <br>
                 Rediscover the heightened sensations and comfort that comes with exposing your clitoris.For more information about this procedure, contact Couples Clinic at Aruna Hospital.
              </span>
             </div>
@@ -193,11 +217,11 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <span>
                     Monsplasty: Improving Aesthetics and Comfort 
-                    Monsplasty, available at Aruna Hospital Couples Clinics, is a surgical procedure aimed at changing the shape and reducing the size of the pubic mound, the area above the pubic bone. 
-                    Benefits:
-                    Aesthetics: Improves the appearance of the pubic area. 
-                    Comfort: Relieves discomfort and embarrassment. 
-                    Custom: Tailored to your individual needs and preferences. 
+                    Monsplasty, available at Aruna Hospital Couples Clinics, is a surgical procedure aimed at changing the shape and reducing the size of the pubic mound, the area above the pubic bone. <br>
+                    Benefits:<br>
+                    Aesthetics: Improves the appearance of the pubic area. <br>
+                    Comfort: Relieves discomfort and embarrassment. <br>
+                    Custom: Tailored to your individual needs and preferences. <br>
                     Rediscover comfort and confidence with Monsplasty.For more information about this procedure, contact Couples Clinic at Aruna Hospital.  
                 </span>
             </div>
