--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
           <div class="carousel-item active  col-lg-12 col-sm-12 col-md-12">
               <div class="card-wrapper container-sm d-flex   justify-content-around">
                   <!--  FIRST CARD -->
-                  <div class="card col-lg-4 col-sm-4 col-md-4" style="width: 18rem;">
+                  <div class="card col-lg-4 col-sm-12 col-md-12" style="width: 18rem;">
                       <div class="card-body ourservicesfirstcard">
                           <img src="assets/img/card1.png"  class="img-fluid" alt="">
                           <h5 class="card-title">Aesthetic Gynecology</h5>
@@ -419,7 +419,7 @@
                       <h6>Our experienced  team offers individual support in a discreet and pleasant atmosphere. Rediscover your self-esteem and intimacy with vaginal rejuvenation at Aruna Hospital's couples clinics Book Your consultation appointment today!</h6>
                       <br>
                       <br>
-                    <a href="#" class="btn btn-primary">learn more</a>
+                    <a href="femalenonsurgical.html" class="btn btn-primary">learn more</a>
                </div>
              
         </div>
