--- a/male.html
+++ b/male.html
@@ -23,46 +23,73 @@
 </head>
 <body>
 
- <!-- Header -->
- <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
-  <div class="container-fluid d-flex justify-content-between align-items-center">
-    <!-- <div class="col-3"> 
-      <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
-    </div> -->
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-          aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav">
-          <div class="row"> 
-            <div class="col-3 ps-5"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-                </li>
-            </div>
-             <div class="col-3 ps-5"> 
-               <li class="nav-item ps-5">
-                  <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
-               </li>
-             </div>
-            <div class="col-3 ps-5"> 
-                <li class="nav-item mt-3  ps-2 navbarphonenumber">
-                    <a class="nav-link" href="#"><img src="assets/img/phone.svg" alt="">+79979901881</a>
-                </li>
-            </div>
-            <div class="col-3 ps-5  mt-2 navbarappoinment"> 
-                <li class="nav-item ps-5">
-                    <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
-                </li>
-            </div>
-          </div>
-          </ul>
+  <!-- Header -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-white navbar-fixed-top">
+    <div class="container-fluid d-flex justify-content-between align-items-center">
+      <div class="col-3"> 
+        <a class="navbar-brand" href="#"><img src="assets/img/logo.png" alt=""></a>
       </div>
-  </div>
-</nav>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse   navbar-collapse justify-content-center ml-auto" id="navbarNav">
+            <ul class="navbar-nav">
+            <div class="row"> 
+              <!-- <div class="col-3 ps-5"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link active" aria-current="page" href="#"><img src="assets/img/logo.png" alt=""></a>
+                  </li>
+              </div> -->
+               <div class="col-lg-3 col-sm-12 col-md-12 ps-5 me-5"> 
+                 <li class="nav-item ps-5 me-5">
+                    <a class="nav-link active" aria-current="page" href="index.html"><img src="assets/img/logo.png" alt=""></a>
+                 </li>
+               </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5"> 
+                  <li class="nav-item mt-3  navbarphonenumber">
+                    <div class="row"> 
+                        <div class="col-3 ps-2"> 
+                          <a class="nav-link" href="index.html"><img src="assets/img/phone.svg" alt=""> </a>
+                        </div>
+                        <div class="col-9 mt-2">
+                          <h5>+79979901881</h5>
+                        </div>
+                    </div>
+                  </li>
+              </div>
+              <div class="col-lg-3 col-sm-12 col-md-12 ms-5  mt-2 navbarappoinment"> 
+                  <li class="nav-item ps-5">
+                      <a class="nav-link" href="appoinment.html"><button type="button" class="btn btn-primary">APPOINTMENT</button></a>
+                  </li>
+              </div>
+            </div>
+            </ul>
+        </div>
+    </div>
+  </nav>
 
 <!-- Ending  Header -->
+
+
+<!--  MAIN SECTION -->
+
+<section>
+  <div class="container mb-5">
+      <div class="row"> 
+          <h3 class="pb-3">MALE</h3>
+          <div class="col-lg-6 col-md-12 col-sm-12">
+              
+          </div>
+          <div class="col-lg-6 col-md-12 col-sm-12 p-3">
+        
+          </div>
+      </div>
+  </div>
+</section>
+
+<!--  ENDING  MAIN SECTION -->
+
 
 <!--  Erectile Dysfunction  -->
 <section>
@@ -75,12 +102,12 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                <span>
                     Erectile Dysfunction: Regaining Confidence and Intimacy
-                    Erectile Dysfunction (ED) is a condition where a man experiences difficulty achieving or maintaining an erection sufficient for sexual activity. At Aruna Hospital Couple Clinics, we provide comprehensive solutions to help you regain confidence and intimacy.
-                    Our Approach:
-                    Diagnosis: Our experienced specialists determine the underlying causes of your ED.
+                    Erectile Dysfunction (ED) is a condition where a man experiences difficulty achieving or maintaining an erection sufficient for sexual activity. At Aruna Hospital Couple Clinics, we provide comprehensive solutions to help you regain confidence and intimacy.<br>
+                    Our Approach:<br>
+                    Diagnosis: Our experienced specialists determine the underlying causes of your ED.<br>
                     Treatment: We offer personalized treatment plans, which
-                    h may include medications, lifestyle adjustments, or other therapies.
-                    Support: Our compassionate team is here to address your concerns and guide you toward improved sexual health.
+                    h may include medications, lifestyle adjustments, or other therapies.<br>
+                    Support: Our compassionate team is here to address your concerns and guide you toward improved sexual health.<br>
                     Don't let ED impact your quality of life. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more satisfying and fulfilling sex life.
                </span>
             </div>
@@ -97,11 +124,11 @@
             <div class="col-lg-6 col-md-12 col-sm-12">
                <span>
                     Urinary Incontinence: Regain Control and Confidence
-                    Urinary Incontinence is a common condition where individuals experience unintentional leakage of urine. At Aruna Hospital Couple Clinics, we offer effective solutions to help you regain control and confidence in your daily life.
-                    Our Approach:
-                    Assessment: Our experienced specialists assess the type and severity of your incontinence.
-                    Treatment: We provide personalized treatment plans, which may include lifestyle modifications, pelvic floor exercises, medications, or other therapies.
-                    Support: Our caring team is here to offer guidance and support as you manage and improve your urinary health.
+                    Urinary Incontinence is a common condition where individuals experience unintentional leakage of urine. At Aruna Hospital Couple Clinics, we offer effective solutions to help you regain control and confidence in your daily life.<br>
+                    Our Approach:<br>
+                    Assessment: Our experienced specialists assess the type and severity of your incontinence.<br>
+                    Treatment: We provide personalized treatment plans, which may include lifestyle modifications, pelvic floor exercises, medications, or other therapies.<br>
+                    Support: Our caring team is here to offer guidance and support as you manage and improve your urinary health.<br>
                     Don't let urinary incontinence hold you back. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more comfortable and confident life
                </span>
             </div>
@@ -117,17 +144,17 @@
 <section>
     <div class="container mb-5">
         <div class="row"> 
-            <h1>Premature Ejaculation  </h1>
+            <h3 class="pb-5">Premature Ejaculation  </h3>
             <div class="col-lg-6 col-md-12 col-sm-12">
                 <img src="assets/img/1.png" class="img-fluid" alt="">
             </div>
             <div class="col-lg-6 col-md-12 col-sm-12">
                <span>
                     Premature Ejaculation: Overcoming for a Satisfying Intimate Life
-                    Premature Ejaculation (PE) is a common condition where a man reaches orgasm and ejaculates sooner than desired during sexual activity. At Aruna Hospital Couple Clinics, we offer effective solutions to help you overcome this challenge and enjoy a more satisfying intimate life.
-                    Our Approach:
-                    Diagnosis: Our experienced specialists assess the nature and potential causes of your PE.
-                    Treatment: We provide personalized treatment plans, which may include behavioral techniques, counseling, medications, or other therapies.
+                    Premature Ejaculation (PE) is a common condition where a man reaches orgasm and ejaculates sooner than desired during sexual activity. At Aruna Hospital Couple Clinics, we offer effective solutions to help you overcome this challenge and enjoy a more satisfying intimate life.<br>
+                    Our Approach:<br>
+                    Diagnosis: Our experienced specialists assess the nature and potential causes of your PE.<br>
+                    Treatment: We provide personalized treatment plans, which may include behavioral techniques, counseling, medications, or other therapies.<br>
                     Support: Our understanding team is here to provide guidance and support as you work towards improving your sexual health and intimacy.
                     Don't let Premature Ejaculation affect your confidence or relationship. Contact Aruna Hospital Couple Clinics to explore your options and start your journey toward a more fulfilling intimate life.
                </span>
